@@ -254,7 +254,8 @@ for path in (
     'skins/cpsskins_cps3',
     'skins/cpsskins_cps3_macroless',
     'skins/cpsskins_plone',
-    'skins/cpsskins_plone2') :
+    'skins/cpsskins_plone2',
+    'skins/cpsskins_plone2_macroless'):
     registerDirectory(path, globals())
 
 def initialize(registrar):
